--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
         <h1>Scan Here</h1>
         <div>
-            <img class="qr-code" src="/assets/1.jpg" alt="QR Code">
+            <img class="qr-code" src="https://images.pexels.com/photos/31197867/pexels-photo-31197867/free-photo-of-young-woman-embracing-nature-in-springtime.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="QR Code">
         </div>
         <p>Point your camera to scan the QR code!</p>
     </div>
