--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #2980b9, #6dd5fa);
+            background: linear-gradient(135deg, #2e2e2e, #6d014c);
             color: white;
             text-align: center;
             margin: 0;
@@ -41,13 +41,24 @@
         }
 
         /* QR code styling */
-        .qr-code {
+        /* .qr-code {
             margin: 20px 0;
             padding: 10px;
             background: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
+        } */
+
+        .qr-code {
+    width: 400px; /* Increased size from default */
+    height: 400px; /* Ensure it's proportionate */
+    margin: 20px 0;
+    padding: 10px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
 
         /* Footer text styling */
         p {
@@ -70,7 +81,7 @@
     <div class="container">
         <h1>Scan Here</h1>
         <div>
-            <img class="qr-code" src="https://images.pexels.com/photos/31197867/pexels-photo-31197867/free-photo-of-young-woman-embracing-nature-in-springtime.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="QR Code">
+            <img class="qr-code" src="/assets/1.jpg" alt="QR Code">
         </div>
         <p>Point your camera to scan the QR code!</p>
     </div>
